# AI4TutleSoup_LangChain

./: .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
.cursor/rules/: reading.mdc  turtlesoup-systemrule.mdc
.langgraph_api/: .langgraph_ops.pckl
src/: __init__.py  config.py  context.py  game.py  game_controller.py  mock_data.py  runtime.py  simple_workflow.py  state_schema.py  workflow.py
src/agents/: analysis_agent.py  detection_agent.py  reply_agent.py  structure_agent.py  summary_agent.py
src/memory/: brainchain.py
src/prompts/: agent_prompts.py  graph_templates.json  hint_templates.json  reply_prompts.py
src/tools/: detection_tools.py  hint_generator.py  structure_tools.py
src/utils/: logger_utils.py  prompt_utils.py  state_utils.py
tests/: dev_test.py  game_flow_test.py  test_llm_config.py
tests/memory/: test_brainchain.py
